--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -3,7 +3,7 @@ connection.initialSize=2
 connection.maxActive=5
 connection.minActive=2
 connection.password=root
-connection.url=jdbc\:mysql\://127.0.0.1/jpa_demo?createDatabaseIfNotExist\=true&amp;useUnicode\=true&amp;characterEncoding\=utf-8"
+connection.url=jdbc\:mysql\://127.0.0.1/mitdy_shopping_dev_01?createDatabaseIfNotExist\=true&amp;useUnicode\=true&amp;characterEncoding\=utf-8"
 connection.username=root
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=update
