--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -16,3 +16,8 @@ redis.maxWait=1000
 redis.testOnBorrow=true
 #当客户端闲置多长时间后关闭连接，如果指定为0，表示关闭该功能
 redis.timeout=10000
+
+#ActiveMQ
+jms.broker.url=tcp://localhost:61616
+jms.queue.name=msgqueue
+
