--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -1,4 +1,10 @@
 
+
+#dubbo
+dubbo.registry=zookeeper://127.0.0.1:2181
+dubbo.version=1.0
+dubbo.port=20880
+
 #redis中心
 #绑定的主机地址
 redis.host=127.0.0.1
@@ -20,4 +26,21 @@ redis.timeout=10000
 #ActiveMQ
 jms.broker.url=tcp://localhost:61616
 jms.queue.name=msgqueue
+
+
+#######################Memcached配置#######################  
+#服务器地址  
+memcached.server=127.0.0.1:11211
+#初始化时对每个服务器建立的连接数目  
+memcached.initConn=20  
+#每个服务器建立最小的连接数  
+memcached.minConn=10  
+#每个服务器建立最大的连接数  
+memcached.maxConn=50  
+#自查线程周期进行工作，其每次休眠时间  
+memcached.maintSleep=3000  
+#Socket的参数，如果是true在写数据时不缓冲，立即发送出去  
+memcached.nagle=false  
+#Socket阻塞读取数据的超时时间  
+memcached.socketTO=3000  
 
