--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,16 @@
 		<spring.version>4.1.0.RELEASE</spring.version>
 		<org.springframework.security.version>3.1.0.RELEASE</org.springframework.security.version>
 		<hibernate.version>4.1.0.Final</hibernate.version>
-		<hibernate.validator.version>4.1.0.Final</hibernate.validator.version>
+		<hibernate.validator.version>5.3.4.Final</hibernate.validator.version>
 		<jpa.version>1.0.1.Final</jpa.version>
 		<jackson.version>2.1.5</jackson.version>
-		<slf4j.version>1.7.5</slf4j.version>
+		<slf4j.version>1.7.22</slf4j.version>
 		<junit.version>4.11</junit.version>
+		<testng.version>6.8.8</testng.version>
 		<log4j.version>1.2.14</log4j.version>
 		<jdk.version>1.8</jdk.version>
+		<mockito.version>1.9.5</mockito.version>
+		<dubbo.version>2.5.3</dubbo.version>
 	</properties>
 
 	<dependencies>
@@ -102,7 +105,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.7.3</version>
+			<version>2.9.0</version>
 		</dependency>
 		<!-- enchace -->
 		<dependency>
@@ -148,13 +151,48 @@
 			<version>0.9.5.2</version>
 		</dependency>
 
-		<!-- junit测试包 -->
+		<!-- test -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>${testng.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3.RC2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>1.3.RC2</version>
+		</dependency>
+
+
+		<!-- test end -->
+
+
 		<!-- 阿里巴巴数据源包 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -241,9 +279,45 @@
 			<artifactId>activemq-all</artifactId>
 			<version>5.9.0</version>
 			<scope>compile</scope>
-		</dependency> 
+		</dependency>
 
+		<dependency>
+			<groupId>com.whalin</groupId>
+			<artifactId>Memcached-Java-Client</artifactId>
+			<version>3.0.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
+		<!-- DUBBO -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>${dubbo.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.github.sgroschupf</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.1</version>
+		</dependency>
+		<!-- DUBBO END -->
+		
+		
 	</dependencies>
+	
 	<build>
 		<finalName>Mitdy-Shopping</finalName>
 		<plugins>
