--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -3,9 +3,9 @@ connection.initialSize=2
 connection.maxActive=5
 connection.minActive=2
 connection.password=root
-connection.url=jdbc\:mysql\://127.0.0.1/mitdy_shopping_dev_01?createDatabaseIfNotExist\=true&amp;useUnicode\=true&amp;characterEncoding\=utf-8"
+connection.url=jdbc\:mysql\://127.0.0.1/mitdy_shopping_dev_02?createDatabaseIfNotExist\=true&amp;useUnicode\=true&amp;characterEncoding\=utf-8"
 connection.username=root
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=update
-hibernate.show_sql=true
-hibernate.format_sql=true
+hibernate.show_sql=false
+hibernate.format_sql=false
