--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
  ### set log levels ###
 #log4j.rootLogger = debug , stdout , D , E
-log4j.logger.org.hibernate.SQL = trace   
-log4j.logger.org.hibernate.type = trace
+#log4j.logger.org.hibernate.SQL = E   
+#log4j.logger.org.hibernate.type = E
 log4j.rootLogger = info , stdout
 
 ###  output to the console ###
