--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>springmvc.mybatis</groupId>
-	<artifactId>springmvc-jpa-demo</artifactId>
+	<groupId>shopping</groupId>
+	<artifactId>mitdy-shopping</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springmvc Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<mybatis.version>3.2.4</mybatis.version>
 		<spring.version>4.1.0.RELEASE</spring.version>
 		<org.springframework.security.version>3.1.0.RELEASE</org.springframework.security.version>
 		<hibernate.version>4.1.0.Final</hibernate.version>
@@ -95,6 +96,27 @@
 			<version>${spring.version}</version>
 		</dependency>
 		<!-- springframe end -->
+		
+		<!-- mybatis核心包 -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+		</dependency>
+		
+		<!-- mybatis/spring包 -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		
+		<!-- mysql驱动包 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.29</version>
+		</dependency>
 
 		<!-- Redis 相关依赖 -->
 		<dependency>
@@ -136,13 +158,6 @@
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
 			<version>${jpa.version}</version>
-		</dependency>
-
-		<!-- mysql驱动包 -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.29</version>
 		</dependency>
 
 		<dependency>
