--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,6 +4,17 @@
 #log4j.logger.org.hibernate.type = E
 log4j.rootLogger = info , stdout
 
+log4j.logger.com.springframework=DEBUG
+log4j.logger.com.ibatis=DEBUG  
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG  
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG  
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG  
+log4j.logger.java.sql.Connection=DEBUG  
+log4j.logger.java.sql.Statement=DEBUG  
+log4j.logger.java.sql.PreparedStatement=DEBUG  
+log4j.logger.java.sql.ResultSet=DEBUG
+
+
 ###  output to the console ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
