--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -44,3 +44,12 @@ memcached.nagle=false
 #Socket阻塞读取数据的超时时间  
 memcached.socketTO=3000  
 
+
+
+serial.number.prefix=MITDY-
+serial.number.date.pattern=yyyyMMdd
+serial.number.number.pattern=00000
+serial.number.number.initialPoolSize=100
+serial.number.number.maxPoolSize=200
+serial.number.number.minPoolSize=100
+
