--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -46,10 +46,21 @@ memcached.socketTO=3000
 
 
 
-serial.number.prefix=MITDY-
-serial.number.date.pattern=yyyyMMdd
-serial.number.number.pattern=00000
-serial.number.number.initialPoolSize=100
-serial.number.number.maxPoolSize=200
-serial.number.number.minPoolSize=100
+#0是基于DB的，1是基于Java BlockingQueue的
+serial.number.mode=0
 
+#流水号前缀
+serial.number.prefix=UCS-
+
+#日期格式
+serial.number.datePattern=yyMMdd
+
+#数字格式
+serial.number.numberPattern=00000000
+
+#序列号队列初始大小
+serial.number.initialPoolSize=300
+
+#最大
+serial.number.maxPoolSize=300
+serial.number.minPoolSize=200
